feat: AiChat创建群聊模块
1.搭建了UI布局；
2.完成了相关逻辑交互

--- a/Android/scenes/aichat/src/main/res/values/colors.xml
+++ b/Android/scenes/aichat/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="aichat_dialog_bg_blue">#152164</color>
+    <color name="aichat_text_grey_989">#989DBA</color>
+    <color name="aichat_text_blue_00">#009DFF</color>
 </resources>
