[FEAT][AI-Chat] add sendMessage

--- a/Android/scenes/aichat/src/main/res/layout/aichat_agent_list_item.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_agent_list_item.xml
@@ -8,6 +8,7 @@
     android:paddingVertical="8dp">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:cardCornerRadius="16dp"
