--- a/Android/scenes/aichat/src/main/res/layout/aichat_chat_activity.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_chat_activity.xml
@@ -17,18 +17,12 @@
         app:showMoreIcon="false"
         tools:ignore="MissingConstraints" />
 
-    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+    <io.agora.scene.aichat.imkit.widget.messageLayout.EaseChatMessageListLayout
+        android:id="@+id/layout_chat_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/chat_chat_input_menu"
-        android:layout_below="@+id/titleView">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/message_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+        android:layout_below="@+id/titleView"
+        android:layout_above="@id/chat_chat_input_menu"/>
 
     <io.agora.scene.aichat.imkit.widget.EaseChatPrimaryMenu
         android:id="@+id/chat_chat_input_menu"
