[Feat][Ai-Chat]add chat conversation

--- a/Android/scenes/aichat/src/main/res/drawable/aichat_widget_chat_primary_bg.xml
+++ b/Android/scenes/aichat/src/main/res/drawable/aichat_widget_chat_primary_bg.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="16dp"/>
-    <solid android:color="#CCFFFFFF"/>
+    <solid android:color="#FEFFFF"/>
 
 </shape>
