--- a/Android/scenes/aichat/src/main/res/layout/ease_row_sent_message.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_row_sent_message.xml
@@ -3,21 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_bubble_out"
-    android:paddingEnd="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingEnd="20dp"
     android:paddingBottom="16dp">
+
+    <TextView
+        android:id="@+id/timestamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/aichat_row_notify_bg"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="4dp"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="11-01 08:20"
+        tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/aichat_message_item_right_bg"
         android:paddingHorizontal="14dp"
         android:paddingVertical="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/timestamp"
+        app:layout_goneMarginTop="0dp">
 
         <TextView
             android:id="@+id/tv_chatcontent"
