[Feat][AI_Chat] send Message add ext

--- a/Android/scenes/aichat/src/main/res/layout/ease_chat_message_list.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_chat_message_list.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.scwang.smart.refresh.header.ClassicsHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_list"
         android:layout_width="match_parent"
