--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -70,12 +70,12 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_set_mode_send"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_gravity="bottom"
             android:layout_marginStart="5dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/aichat_icon_send_message_selector"
+            android:layout_marginBottom="11dp"
+            android:background="@drawable/aichat_icon_send_message_selector"
             android:visibility="gone"
             tools:visibility="visible" />
 
