--- a/Android/scenes/aichat/src/main/res/layout/aichat_item_chat_group_create.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_item_chat_group_create.xml
@@ -8,14 +8,15 @@
 
 
     <FrameLayout
-        android:layout_width="56dp"
-        android:layout_height="56dp">
+        android:layout_width="64dp"
+        android:layout_height="64dp">
 
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center_horizontal"
             app:cardCornerRadius="30dp"
             app:cardElevation="0dp">
 
@@ -38,8 +39,9 @@
 
         <ImageView
             android:id="@+id/iv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"
             android:src="@mipmap/default_user_avatar" />
 
@@ -47,7 +49,9 @@
             android:id="@+id/iv_delete"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:scaleType="centerCrop"
             android:src="@drawable/aichat_agent_delete" />
     </FrameLayout>
