[Feat][AI-Chat] update create agent/group

--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -68,6 +68,7 @@
     <color name="black33">#333333</color>
     <color name="black_20_percent">#33000000</color>
     <color name="black_30_percent">#4D000000</color>
+    <color name="black_40_percent">#66000000</color>
     <color name="black_50_percent">#80000000</color>
     <color name="black_60_percent">#99000000</color>
     <color name="black_70_percent">#B3000000</color>
