[Feat][Ai-Chat]add voice service

--- a/Android/scenes/aichat/src/main/res/layout/aichat_list_activity.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_list_activity.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:ctv_centerText="@string/aichat_name"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <androidx.viewpager2.widget.ViewPager2
