--- a/Android/scenes/aichat/src/main/res/layout/aichat_chat_activity.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_chat_activity.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleView"
-        android:layout_above="@id/chat_chat_input_menu"/>
+        android:layout_marginBottom="60dp" />
 
     <io.agora.scene.aichat.imkit.widget.EaseChatPrimaryMenu
         android:id="@+id/chat_chat_input_menu"
