[Feat][Ai-Chat] add voice call ui

--- a/Android/scenes/aichat/src/main/res/layout/ease_chat_message_list.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_chat_message_list.xml
@@ -11,6 +11,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_list"
         android:layout_width="match_parent"
+        android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="40dp"
         android:layout_height="match_parent" />
 
 </com.scwang.smart.refresh.layout.SmartRefreshLayout>
