--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -18,11 +18,11 @@
         android:layout_gravity="end"
         android:visibility="gone">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
-            android:src="@drawable/aichat_show_tips_bg"
+            android:src="@drawable/aichat_show_bottom_tips_bg"
             android:textSize="12sp" />
 
         <androidx.appcompat.widget.AppCompatTextView
