--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_title_bar.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_title_bar.xml
@@ -26,7 +26,7 @@
         android:layout_height="36dp"
         android:layout_marginStart="5dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/default_user_avatar"
+        tools:src="@drawable/aichat_agent_avatar_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_back_icon"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,17 +42,38 @@
         app:layout_constraintStart_toEndOf="@id/iv_back_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@id/iv_back_icon"
         app:layout_constraintStart_toEndOf="@+id/iv_back_icon"
-        app:layout_constraintTop_toTopOf="@id/iv_back_icon"
-        tools:text="小深刻的求书" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintTop_toTopOf="@id/iv_back_icon">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="小深刻的求书小深刻的求书小深刻的求书小深刻的求书小深刻的求书小深刻的求书小深刻的求书小深刻的求书" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福儿孙自有儿孙福" />
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/iv_more_icon"
