--- a/Android/app/src/main/res/layout/app_about_info_item.xml
+++ b/Android/app/src/main/res/layout/app_about_info_item.xml
@@ -7,10 +7,10 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivLogo"
-        android:layout_width="wrap_content"
+        android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_marginTop="42dp"
-        android:src="@mipmap/app_ktv_ic_launcher"
+        android:src="@drawable/app_ktv_ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
