[FIX] sound card no volume

--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_sound_card.xml
@@ -155,7 +155,7 @@
             android:inputType="numberDecimal"
             android:imeOptions="actionDone"
             android:textSize="13sp"
-            tools:text="3.1f"
+            tools:text="100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/dvSoundType"
             app:layout_constraintBottom_toBottomOf="@id/dvGainAdjust"
@@ -168,8 +168,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:contentDescription="@string/ktv_gain_adjust"
-            android:max="40"
-            tools:progress="10"
+            android:max="400"
+            tools:progress="100"
             android:progressDrawable="@drawable/ktv_seekbar_progress"
             android:thumb="@drawable/ktv_seekbar_thumb20"
             app:layout_constraintEnd_toStartOf="@id/etGainAdjust"
