--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +8,8 @@
     android:paddingHorizontal="20dp"
     android:paddingVertical="8dp"
     tools:background="@color/grey_80_percent"
-    tools:ignore="MissingDefaultResource">
+    tools:ignore="MissingDefaultResource"
+    tools:parentTag="android.widget.LinearLayout">
 
     <!--  按住录音  -->
     <FrameLayout
@@ -16,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
@@ -42,7 +44,6 @@
         android:background="@drawable/aichat_widget_chat_primary_bg"
         android:gravity="bottom"
         android:minHeight="50dp"
-        tools:visibility="gone"
         android:orientation="horizontal"
         android:paddingHorizontal="12dp">
 
@@ -106,39 +107,8 @@
     </LinearLayout>
 
     <!--  录音  -->
-    <LinearLayout
-        android:id="@+id/layout_recording"
+    <io.agora.scene.aichat.imkit.widget.EaseRecordView
+        android:id="@+id/record_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_speaking_action"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/aichat_release_to_send_swipe_left_to_cancel"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/aichat_recording_bg"
-            app:cardCornerRadius="10dp">
-
-            <ImageView
-                android:id="@+id/iv_audio_sound"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="50dp"
-                android:layout_gravity="center"
-                android:src="@drawable/aichat_audio_no_sound"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
-</LinearLayout>
+        android:layout_height="wrap_content" />
+</merge>
