--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_record.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_record.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:parentTag="android.widget.LinearLayout"
-    tools:background="@color/grey_80_percent">
+    tools:background="@color/grey_80_percent"
+    tools:parentTag="android.widget.LinearLayout">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_record_action"
@@ -43,4 +43,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </com.google.android.material.card.MaterialCardView>
-</merge>
+</LinearLayout>
